--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div class="sticky">
   <div class="container">
-    <a class="button button-mars sticky-left" href="https://youtu.be/mmX1ZW4r8Ac">Заказать
+    <a class="button button-mars sticky-left" href="https://youtu.be/mmX1ZW4r8Ac" target="_blank">Заказать
       воду</a>
     <nav class="sticky-right">
       <a href="#about_us">О нас</a>
